--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="row">
     <div class="image">
-        <img class="tilt" src="./img/photo_2022-07-21_23-24-27.jpg" alt=" ">
+        <img class="tilt" src="img/photo_2022-07-21_23-24-27.jpg" alt=" ">
     </div>
     <div class="content">
         <h3>my name is <span>Ahmed Anwer</span></h3>
@@ -59,7 +59,7 @@
         <p> <span>address :</span>egypt ,cairo</p>
      </div>
    </div>
-   <a href="./img/Ahmed_Anwer Saber_Resume_20-07-2022-14-56-52.pdf" target="_blank" class="btn">download cv</a>    
+   <a href="img/Ahmed_Anwer Saber_Resume_20-07-2022-14-56-52.pdf" target="_blank" class="btn">download cv</a>    
 </div>
 </div>
 </section>
@@ -126,25 +126,25 @@
         </div>
     </div>
     <div class="box">
-        <img src="./img/school.jpg" alt="">
+        <img src="img/school.jpg" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="./img/background.jpg" alt="">
+        <img src="img/background.jpg" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="./img/kitchin.png" alt="">
+        <img src="img/kitchin.png" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="./img/logo.png" alt="">
+        <img src="img/logo.png" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
@@ -156,7 +156,7 @@
 <h1 class="heading"><span>my</span>blogs</h1>
 <div class="box-container">
 <div class="box" data-tilt data-tilt-scale="1.0">
-<img src="./img/blogs1.webp" alt="">
+<img src="img/blogs1.webp" alt="">
 <h3>blogs title goes here</h3>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
     Deserunt maxime perferendis dolores labore dolor Lorem ipsum dolor 
@@ -164,7 +164,7 @@
      <a href="#" class="btn">learn more</a>
 </div>
 <div class="box" data-tilt data-tilt-scale="1.0">
-    <img src="./img/blogs2.jpg" alt="">
+    <img src="img/blogs2.jpg" alt="">
     <h3>blogs title goes here</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
         Deserunt maxime perferendis dolores labore dolor Lorem ipsum 
@@ -172,7 +172,7 @@
          <a href="#" class="btn">learn more</a>
     </div>
     <div class="box" data-tilt data-tilt-scale="1.0">
-        <img src="./img/blogs3.webp" alt="">
+        <img src="img/blogs3.webp" alt="">
         <h3>blogs title goes here</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Deserunt maxime perferendis dolores labore dolor Lorem, ipsum dolor sit
@@ -186,7 +186,7 @@
 <h1 class="heading">contact <span>me</span></h1>
 <div class="row">
 <div class="image" data-tilt data-tilt-scale="1.0">
-    <img src="./img/pngtree-man-calling-loudly-png-image_4120725.jpg" alt="">
+    <img src="img/pngtree-man-calling-loudly-png-image_4120725.jpg" alt="">
 </div>
 <form action=" " onsubmit="sendEmail();reset();return false;">
     <div class="inputbox">
