--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section class="home" id="home">
     <div id="particles-js"></div>
 <div class="content">
-    <img  class="tilt" src="/img/حخقفبخمهخ.jpg" alt=" " data-tilt data-tilt-scale="1.0">
+    <img  class="tilt" src="./حخقفبخمهخ.jpg" alt=" " data-tilt data-tilt-scale="1.0">
     <h3> Ahmed <span>Anwer</span></h3>
     <p>i am a <span class="typing-text">front end developer</span></p>
      <a href="#about" class="btn">about me</a>
