--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="row">
     <div class="image">
-        <img class="tilt" src="img/photo_2022-07-21_23-24-27.jpg" alt=" ">
+        <img class="tilt" src="./photo_2022-07-21_23-24-27.jpg" alt=" ">
     </div>
     <div class="content">
         <h3>my name is <span>Ahmed Anwer</span></h3>
@@ -59,7 +59,7 @@
         <p> <span>address :</span>egypt ,cairo</p>
      </div>
    </div>
-   <a href="img/Ahmed_Anwer Saber_Resume_20-07-2022-14-56-52.pdf" target="_blank" class="btn">download cv</a>    
+   <a href="./Ahmed_Anwer Saber_Resume_20-07-2022-14-56-52.pdf" target="_blank" class="btn">download cv</a>    
 </div>
 </div>
 </section>
