--- a/index.html
+++ b/index.html
@@ -114,37 +114,37 @@
 <h1 class="heading"><span>my</span>portfolio</h1>
 <div class="box-container">
     <div class="box">
-        <img src="./img/coffee.jpeg" alt="">
+        <img src="./coffee.jpeg" alt="">
         <div class="content">
             <a href="https://62d9ead8f8b90b174a60c686--famous-elf-db219c.netlify.app/" target="_blank" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="./img/mopile.jpg" alt="">
+        <img src="./mopile.jpg" alt="">
         <div class="content">
             <a href="https://mywebsitedo.000webhostapp.com/" target="_blank" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="img/school.jpg" alt="">
+        <img src="./school.jpg" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="img/background.jpg" alt="">
+        <img src="./background.jpg" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="img/kitchin.png" alt="">
+        <img src="./kitchin.png" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
     </div>
     <div class="box">
-        <img src="img/logo.png" alt="">
+        <img src="./logo.png" alt="">
         <div class="content">
             <a href="#" class="btn">visit website</a>
         </div>
@@ -156,7 +156,7 @@
 <h1 class="heading"><span>my</span>blogs</h1>
 <div class="box-container">
 <div class="box" data-tilt data-tilt-scale="1.0">
-<img src="img/blogs1.webp" alt="">
+<img src="./blogs1.webp" alt="">
 <h3>blogs title goes here</h3>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
     Deserunt maxime perferendis dolores labore dolor Lorem ipsum dolor 
@@ -164,7 +164,7 @@
      <a href="#" class="btn">learn more</a>
 </div>
 <div class="box" data-tilt data-tilt-scale="1.0">
-    <img src="img/blogs2.jpg" alt="">
+    <img src="./blogs2.jpg" alt="">
     <h3>blogs title goes here</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
         Deserunt maxime perferendis dolores labore dolor Lorem ipsum 
@@ -172,7 +172,7 @@
          <a href="#" class="btn">learn more</a>
     </div>
     <div class="box" data-tilt data-tilt-scale="1.0">
-        <img src="img/blogs3.webp" alt="">
+        <img src="./blogs3.webp" alt="">
         <h3>blogs title goes here</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Deserunt maxime perferendis dolores labore dolor Lorem, ipsum dolor sit
@@ -186,7 +186,7 @@
 <h1 class="heading">contact <span>me</span></h1>
 <div class="row">
 <div class="image" data-tilt data-tilt-scale="1.0">
-    <img src="img/pngtree-man-calling-loudly-png-image_4120725.jpg" alt="">
+    <img src="./pngtree-man-calling-loudly-png-image_4120725.jpg" alt="">
 </div>
 <form action=" " onsubmit="sendEmail();reset();return false;">
     <div class="inputbox">
