--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 <!-- particles.js link    -->
-<script src="js/particles.min.js"></script>
-<script src="js/app.js"></script>
+<script src="./particles.min.js"></script>
+<script src="./app.js"></script>
 <!-- vanilla tittle .js  -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
 <!-- send email  -->
 <script src="https://smtpjs.com/v3/smtp.js"></script>
-<script src="./js/index.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
